--- a/src/main/resources/templates/delivery_confirmation.html
+++ b/src/main/resources/templates/delivery_confirmation.html
@@ -43,7 +43,7 @@
 </head>
 <body>
 <div class="header">
-    <img src="/images/Delivery_Confirmation.jpg" alt="Delivery Confirmation Image">
+<!--    <img src="/images/Delivery_Confirmation.jpg" alt="Delivery Confirmation Image">-->
     <h1>Delivery Confirmed!</h1>
 </div>
 <p>Thank you for confirming the delivery.</p>
